# crappola

./: .gitignore  CMakeLists.txt  README.md
examples/: arithmetic.c  base.h  config.h  cycle_a.h  cycle_b.h  cycle_test.c  defs.h  error_in_include.h  error_test.c  hello.c  if_test.c  include_test.c  loop.c  macros.c  nested_include.c  variables.c
include/: crappola.h
src/: codegen.c  lexer.c  linker.c  main.c  parser.c  preprocessor.c
